--- a/Range Rover/index.html
+++ b/Range Rover/index.html
@@ -1,9 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en"><head>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="dark mode/dark-mode.css">
+<link rel="icon" href="favicon/ruby (1).png" type="image/x-icon">
+<link rel="stylesheet" href="mdb/css/global.min.css">
+<link rel="stylesheet" href="CSS/Timestamps.css">
+<link rel="stylesheet" href="mdb/css/mdb.min.css">
+<link rel="stylesheet" href="mdb/css/style.css">
+<link rel="stylesheet" href="css/room.css">
+<link rel="stylesheet" href="design/css/mdb.min.css">
+<link href="rubyproducti9n pro/css/bootstrap.min.css" rel="stylesheet">
+<link href="rubyproducti9n pro/css/mdb.min.css" rel="stylesheet">
+<link rel="stylesheet" href="../js/dark-mode.css">
+<link rel="stylesheet" href="design/css/mdb.min.css">
+<script src="JS/time ago.js" type="text/javascript"></script>
+<script src="timeago/jquery.timeago.js" type="text/javascript"></script>
+<script src="timeago/jquery.min.js" type="text/javascript"></script>
+<script src="test/test_helpers.js" type="text/javascript"></script>
+<script src="jquery.timeago.js" type="text/javascript"></script>
+<script src="timeago/jquery.timeago.js" type="text/javascript"></script>
+<script src="timeago/test/test_helpers.js" type="text/javascript"></script>
+<link rel="icon" href="favicon/favicon.png" sizes="16x16 32x32" type="image/png">
+<link rel="stylesheet" href="CSS/RUBY PRODUCTION.css">
+<link rel="stylesheet" href="dark mode/dark-mode.css">
+<link rel="icon" href="favicon/ruby (1).png" type="image/x-icon">
+<link rel="stylesheet" href="mdb/css/global.min.css">
+<link rel="stylesheet" href="CSS/Timestamps.css">
+<link rel="stylesheet" href="mdb/css/mdb.min.css">
+<link rel="stylesheet" href="mdb/css/style.css">
+<link rel="stylesheet" href="css/room.css">
+<link rel="stylesheet" href="design/css/mdb.min.css">
+<link href="rubyproducti9n pro/css/bootstrap.min.css" rel="stylesheet">
+<link href="rubyproducti9n pro/css/mdb.min.css" rel="stylesheet">
+<link rel="stylesheet" href="../js/dark-mode.css">
+<link rel="stylesheet" href="design/css/mdb.min.css">
+<script src="JS/time ago.js" type="text/javascript"></script>
+<script src="timeago/jquery.timeago.js" type="text/javascript"></script>
+<script src="timeago/jquery.min.js" type="text/javascript"></script>
+<script src="test/test_helpers.js" type="text/javascript"></script>
+<script src="jquery.timeago.js" type="text/javascript"></script>
+<script src="timeago/jquery.timeago.js" type="text/javascript"></script>
+<script src="timeago/test/test_helpers.js" type="text/javascript"></script>
+<link rel="icon" href="favicon/favicon.png" sizes="16x16 32x32" type="image/png">
+<link rel="stylesheet" href="CSS/RUBY PRODUCTION.css"> -->
+<link rel="stylesheet" href="css/global.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <title>Group 3</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Arimo:ital@1&family=Comfortaa:wght@700&family=Raleway:wght@800&display=swap');
@@ -14,155 +58,6 @@
             background: rgb(255, 255, 255);
             user-select: none;
         }
-        h1{
-            color: #414141;
-            font-family: 'Raleway', sans-serif;
-        text-shadow: 0 0 10px rgba(255, 0, 0, 0);
-        /* font-style: italic; */
-        padding: 10px 20px;
-        border-bottom: 2px rgb(214, 214, 214) solid;
-        font-size: 40px;
-    }
-        .first-container{
-            margin: 10px 20px;
-            border-radius: 20px;
-            background: #eeeeee;
-            border: 2px #e4e4e4 solid;
-        }
-        .first-container .img{
-            width: 30%;
-            padding: 20px;
-            border-radius: 30px;
-        }
-        .first-sub-cont{
-            color: #414141;
-            float: right;
-            width: 66%;
-            padding: 10px 0px;
-            font-weight: 600;
-            font-family: 'Raleway', sans-serif;
-            border: 2px rgba(170, 170, 170, 0) solid;
-        }
-        .first-sub-cont h2{
-            font-size: 18px;
-        }
-        .first-sub-cont .details{
-            color: #4b4b4b;
-            font-family: 'Arimo', sans-serif;
-            line-height: 30px;
-            font-size: 14px;
-        }
-        .second-container{
-            margin: 10px 20px;
-            padding: 25px;
-            border: 2px rgba(0, 0, 0, 0) solid;
-        }
-        .gr-card{
-            display: inline-block;
-            align-items: center;
-            margin: 10px 8px;
-            width: 31%;
-            background-color: #f5f5f500;
-            border: 0px #f5f5f5 solid;
-            box-shadow: 0 0 0px rgba(0, 0, 0, 0.26);
-            border-radius: 20px;
-            font-family: 'Arimo', sans-serif;
-            overflow: hidden;
-            transition: 0.5s ease;
-        }
-        .gr-card:hover{
-            transform: translateY(-20px);
-            margin: 10px 8px;
-            width: 31%;
-            background-color: #f5f5f5;
-            border: 0px #00000042 solid;
-            box-shadow: 5px 5px 10px #00000042;
-            border-radius: 20px;
-            font-family: 'Arimo', sans-serif;
-            overflow: hidden;
-            transition: 0.2s ease;
-        }
-        .gr-img{
-            width: 100%;
-        }
-        .gr-details{
-            display: block;
-            padding: 20px;
-        }
-
-@media screen and (max-width: 768px) {
-        h1{
-            color: #414141;
-            font-family: 'Raleway', sans-serif;
-        text-shadow: 0 0 10px rgba(255, 0, 0, 0);
-        /* font-style: italic; */
-        padding: 10px 20px;
-        border-bottom: 2px rgb(214, 214, 214) solid;
-        font-size: 30px;
-    }
-        .first-container{
-            margin: 10px 20px;
-            border-radius: 20px;
-            background: #eeeeee00;
-            border: 2px #e4e4e400 solid;
-        }
-        .first-container .img{
-            width: 93%;
-            padding: 10px;
-            border-radius: 30px;
-        }
-        .first-sub-cont{
-            color: #414141;
-            float: right;
-            width: 90%;
-            padding: 10px 0px;
-            font-weight: 600;
-            font-family: 'Raleway', sans-serif;
-            border: 2px rgba(170, 170, 170, 0) solid;
-        }
-        .first-sub-cont h2{
-            font-size: 18px;
-        }
-        .first-sub-cont .details{
-            color: #4b4b4b;
-            font-family: 'Arimo', sans-serif;
-            line-height: 30px;
-            font-size: 14px;
-        }
-        .second-container{
-            margin: 10px 0px;
-            padding: 20px;
-            border: 2px rgba(0, 0, 0, 0) solid;
-        }
-        .gr-card{
-            display: inline-block;
-            align-items: center;
-            margin: 10px 0px;
-            width: 100%;
-            background-color: #f5f5f500;
-            border: 2px #e4e4e4 solid;
-            box-shadow: 0 0 0px rgba(0, 0, 0, 0.26);
-            border-radius: 20px;
-            font-family: 'Arimo', sans-serif;
-            overflow: hidden;
-            transition: 0.5s ease;
-        }
-        .gr-card:hover{
-            transform: translateY(-10px);
-            background-color: #f5f5f5;
-            width: 100%;
-            border: 0px #00000042 solid;
-            box-shadow: 5px 5px 10px #00000042;
-            transition: 0.2s ease;
-        }
-        .gr-img{
-            width: 100%;
-        }
-        .gr-details{
-            display: block;
-            padding: 20px;
-        }
-}
     </style>
 </head>
 <body>
@@ -171,71 +66,128 @@
         <h1>Range Rover</h1>
     </center>
 
-    <div class="first-container">
+    <div class="mini-container">
         <img class="img img-first" draggable="false" src="img/rr-1.webp">
     <div class="first-sub-cont">
-        <h2>Range Rover (model no.) </h2>
+        <h2>Introduction </h2>
         <p class="details">
             The Land Rover Range Rover (generally known simply as the Range Rover) is a 4x4 motor car produced by Land Rover, a marque and sub-brand of Jaguar Land Rover. The Range Rover line was launched in 1970 by British Leyland and is now in its fifth generation.
+
+            Additional models have been launched under the Range Rover name, including the Range Rover Sport, Range Rover Evoque, and Range Rover Velar.
         </p>
     </div>
     </div>
 
     <div class="second-container">
 
+        <div class="section-title">
+            <h2>Expanded Line</h2>
+        </div>
+
         <div class="gr-card">
-            <img class="gr-img" src="img/land_rover_range_rover_sport_white_jeep_95237_1280x720.jpg">
+            <img class="gr-img" src="https://images.hdqwalls.com/download/range-rover-evoque-tuned-1280x720.jpg">
             <div class="gr-details">
-                Range Rover
+                <h4> Range Rover Evoque</h4>
+                <div class="sh-detail-primary">
+                    The Land Rover Range Rover Evoque has 1 Diesel Engine and 1 Petrol Engine on offer. The Diesel engine is 1997 cc while the Petrol engine is 1997 cc . It is available with Automatic transmission.Depending upon the variant and fuel type the Range Rover Evoque has a mileage of & Ground clearance of Range Rover Evoque is 212mm. The Range Rover Evoque is a 5 seater 4 cylinder car and has length of 4371mm, width of 2100mm and a wheelbase of 2681mm.
+                    <br><br>
+                    • Transmission Type: Automatic<br>
+                    • Fuel Type: Diesel<br>
+                    • Top Speed: 230 KM/H<br>
+                    • Price: 69.99 Lakh<br>
+            </div>
+                <p class="know-more"  onclick="expandedLine()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
             </div>
         </div>
         <div class="gr-card">
-            <img class="gr-img" src="img/land_rover_range_rover_vogue_white_side_view_108581_1280x720.jpg">
+            <img class="gr-img" src="https://images.hdqwalls.com/download/2018-land-rover-range-rover-vela-qu-1280x720.jpg">
             <div class="gr-details">
-                Range Rover
+                <h4> Range Rover Velar</h4>
+                <div class="sh-detail-primary">
+                    The Land Rover Range Rover Velar has 1 Diesel Engine and 1 Petrol Engine on offer. The Diesel engine is 1999 cc while the Petrol engine is 1997 cc . It is available with Automatic transmission.Depending upon the variant and fuel type the Range Rover Velar has a mileage of 15.8 kmpl . The Range Rover Velar is a 5 seater 4 cylinder car and has length of 4797mm, width of 2145mm and a wheelbase of 2874mm.
+                    <br><br>
+                    • Transmission Type: Automatic<br>
+                    • Fuel Type: Petrol<br>
+                    • Top Speed: 217 KM/H<br>
+                    • Price: 86.75 Lakh<br>
+                </div>
+                <p class="know-more"  onclick="expandedLine()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
             </div>
         </div>
         <div class="gr-card">
-            <img class="gr-img" src="img/range_rover_l405_white_side_view_111801_1280x720.jpg">
+            <img class="gr-img" src="https://static.autox.com/uploads/2020/11/2021-Land-Rover-Discovery.jpg">
             <div class="gr-details">
-                Range Rover
+                <h4> Range Rover Discovery</h4>
+                <div class="sh-detail-primary">
+                    The Land Rover Discovery has 1 Diesel Engine and 3 Petrol Engine on offer. The Diesel engine is 2996 cc while the Petrol engine is 1997 cc and 2996 cc and 2995 cc . It is available with Automatic transmission.Depending upon the variant and fuel type the Discovery has a mileage of . The Discovery is a 7 seater 4 cylinder car.
+                    <br><br>
+                    • Transmission Type: Automatic<br>
+                    • Fuel Type: Diesel<br>
+                    • Top Speed: Undefined<br>
+                    • Price: 86.75 Lakh<br>
+                </div>
+                <p class="know-more"  onclick="expandedLine()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
             </div>
         </div>
 
     </div>
 
-    <div class="first-container">
-        <img class="img img-first" draggable="false" src="img/rr-1.webp">
+
+    <div class="mini-container">
+        <img class="img img-first" draggable="false" src="https://assets.thehansindia.com/h-upload/2020/10/06/1003659-jaguar-land-rover.webp">
     <div class="first-sub-cont">
-        <h2>Range Rover (model no.) </h2>
+        <h2>Jaguar Land Rover | Tata Motors  </h2>
         <p class="details">
-            The Land Rover Range Rover (generally known simply as the Range Rover) is a 4x4 motor car produced by Land Rover, a marque and sub-brand of Jaguar Land Rover. The Range Rover line was launched in 1970 by British Leyland and is now in its fifth generation.
+            Jaguar Land Rover Automotive PLC is the holding company of Jaguar Land Rover Limited, and is a British multinational automobile manufacturer which produces luxury vehicles and sport utility vehicles. Jaguar Land Rover is a subsidiary of Tata Motors Limited and has its head office in Whitley, Coventry, UK. The principal activity of Jaguar Land Rover Limited is the design, development, manufacture and sale of vehicles bearing the Jaguar and Land Rover marques.
+
+            <p class="know-more"  onclick="jaguarInfo()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
         </p>
     </div>
     </div>
 
     <div class="second-container">
 
+        <div class="section-title">
+            <h2>History of Range Rover</h2>
+        </div>
+
         <div class="gr-card">
-            <img class="gr-img" src="img/land_rover_range_rover_sport_white_jeep_95237_1280x720.jpg">
+            <img class="gr-img" src="img/first-gen.webp">
             <div class="gr-details">
-                Range Rover
+                <h4> First Generation Range Rover</h4>
+                <div class="sh-detail-secondary">
+                The first-generation Range Rover was produced between 1969 and 1996. It was available only in a 2-door body until 1981. (Before then, 4-door models had been produced by specialist firms).
+            </div>
+                <p class="know-more"  onclick="generations()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
             </div>
         </div>
         <div class="gr-card">
-            <img class="gr-img" src="img/land_rover_range_rover_vogue_white_side_view_108581_1280x720.jpg">
+            <img class="gr-img" src="img/second-gen.jpg">
             <div class="gr-details">
-                Range Rover
+                <h4> Second Generation Range Rover</h4>
+                <div class="sh-detail-secondary">
+                Twenty-five years after the introduction of the original Range Rover, the second-generation (model-designation P38A) was introduced for the 1995 model year
+                </div>
+                <p class="know-more"  onclick="generations()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
             </div>
         </div>
         <div class="gr-card">
-            <img class="gr-img" src="img/range_rover_l405_white_side_view_111801_1280x720.jpg">
+            <img class="gr-img" src="img/third-gen.jpg">
             <div class="gr-details">
-                Range Rover
+                <h4> Thirt Generation Range Rover</h4>
+                <div class="sh-detail-secondary">
+                    In 2001, the third-generation model was introduced, which saw the model move further upmarket.
+                </div>
+                <p class="know-more"  onclick="generations()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
             </div>
         </div>
 
     </div>
 
+<script>
+function generations(){window.location.href = "generations.html";}
+function expanded(){window.location.href = "expanded.html";}
+function jaguarInfo(){window.location.href = "https://en.wikipedia.org/wiki/Land_Rover";}
+</script>
 </body>
 </html>
