--- a/Range Rover/generations.html
+++ b/Range Rover/generations.html
@@ -2,8 +2,8 @@
 <html lang="en"><head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="dark mode/dark-mode.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- <link rel="stylesheet" href="dark mode/dark-mode.css">
 <link rel="icon" href="favicon/ruby (1).png" type="image/x-icon">
 <link rel="stylesheet" href="mdb/css/global.min.css">
 <link rel="stylesheet" href="CSS/Timestamps.css">
@@ -45,6 +45,7 @@
 <script src="timeago/test/test_helpers.js" type="text/javascript"></script>
 <link rel="icon" href="favicon/favicon.png" sizes="16x16 32x32" type="image/png">
 <link rel="stylesheet" href="CSS/RUBY PRODUCTION.css"> -->
+<script src="js/global.js"></script>
 <link rel="stylesheet" href="css/global.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
@@ -54,28 +55,49 @@
         @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Raleway:wght@200&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Josefin+Sans&family=Raleway:wght@800&display=swap');
         body{display: block;
-            color: rgb(0, 0, 0);
-            background: rgb(255, 255, 255);
+            color: rgb(255, 255, 255);
+            background: rgb(0, 0, 0);
             user-select: none;
+        }
+        .grp-info-container{
+            border-radius: 6px;
+            height: 19vh;
+            border: 2px #242424 solid;
+        }
+        .grp-img{
+            float: left;
+            width: 20%;
+            border-right: 2px #242424 solid;
+            border-radius: 0px;
+            width: 10%;
+        }
+        .grp-info{
+            border: 2px #24242400 solid;
+            margin: 10px 150px;
+            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         }
         .main-title{
             color: #fff;
-            background-color: #fffbf600;
-            background: linear-gradient(-180deg, #007bff, #005ec2);
-            padding: 20px 40px;
+            background-color: #31313100;
+            /* background: linear-gradient(-180deg, #007bff, #005ec2); */
+            padding: 10px 40px;
             margin: 20px 20px;
-            border-bottom: 2px #007bff solid;
-            border-radius: 6px;
-            font-family: Georgia, 'Times New Roman', Times, serif;
+            border-bottom: 4px #444444 solid;
+            border-radius: 0px;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         }
         .first-gen-container{
             margin: 20px 20px;
             padding: 20px;
-            background-color: #ffffff;
-            border: 2px #007bff solid;
+            background-color: #242424;
+            border: 2px #f0f0f000 solid;
             border-radius: 16px;
             line-height: 23px;
             font-family: 'Arimo', sans-serif;
+        }
+        .first-gen-container h1{
+            color: #fff;
+            font-size: 30px;
         }
         .first-gen-img{
             width: 32%;
@@ -94,13 +116,17 @@
             border: 2px rgba(0, 0, 0, 0) solid;
         }
         .gen-container{
-            margin: 20px 20px;
+            margin: 60px 20px;
             padding: 20px;
-            background-color: #ffffff;
-            border: 2px #007bff solid;
-            border-radius: 6px;
+            background-color: #242424;
+            border: 2px #007bff00 solid;
+            border-radius: 16px;
             line-height: 30px;
             font-family: 'Arimo', sans-serif;
+        }
+        .gen-container h1{
+            color: #fff;
+            font-size: 30px;
         }
         .gen-img{
             float: right;
@@ -122,12 +148,16 @@
             width: 10%;
             color: #fff;
         }
+    .nav-ic{display: none;}
+    .nav-strg{display: block;}
 @media screen and (max-width: 768px) {
-    body{opacity: 0;}
+    body{opacity: 1;}
+    .nav-ic{display: block;}
+    .nav-strg{display: none;}
         .main-title{
             color: #fff;
-            background-color: #fffbf600;
-            background: linear-gradient(-180deg, #007bff, #005ec2);
+            background-color: #161616;
+            /* background: linear-gradient(-180deg, #007bff, #005ec2); */
             padding: 20px 40px;
             margin: 20px 20px;
             border-bottom: 2px #007bff solid;
@@ -135,10 +165,10 @@
             font-family: Georgia, 'Times New Roman', Times, serif;
         }
         .first-gen-container{
-            margin: 20px 20px;
-            padding: 20px;
-            background-color: #ffffff;
-            border: 2px #007bff solid;
+            margin: 20px 0px;
+            padding: 10px;
+            background-color: #2c2c2c;
+            border: 0px #007bff solid;
             border-radius: 16px;
             line-height: 23px;
             font-family: 'Arimo', sans-serif;
@@ -154,16 +184,17 @@
         }
         .right{
             float: right;
-            width: 100%;
+            text-indent: 50px;
+            width: 93%;
             margin-top: -10px;
             padding: 10px ;
             border: 2px rgba(0, 0, 0, 0) solid;
         }
         .gen-container{
-            margin: 20px 20px;
-            padding: 20px;
-            background-color: #ffffff;
-            border: 2px #007bff solid;
+            margin: 20px 0px;
+            padding: 10px;
+            background-color: #212121;
+            border: 0px #007bff solid;
             border-radius: 6px;
             line-height: 30px;
             font-family: 'Arimo', sans-serif;
@@ -173,10 +204,10 @@
             float: right;
             padding: 20px;
             border-radius: 26px;
-            width: 100%;
+            width: 87%;
         }
         .gen-info{
-            text-indent: 50px;
+            text-indent: 25px;
             padding: 0px 10px ;
             border: 2px rgba(0, 0, 0, 0) solid;
         }
@@ -185,9 +216,36 @@
 </head>
 <body>
 
-    <center>
-        <h1 class="main-title" >Range Rover Generations</h1>
-    </center>
+    <nav class="navbar">
+        <!-- <div class="brand-name">
+            <a class="br-name">Group - 3</a>
+        </div> -->
+        <ul>
+            <li class="nav-link" onclick="info()">
+                <a class="link"> <i class="fa fa-info-circle nav-ic"></i>
+                  <span class="nav-strg">Info</span>
+                </a>
+            </li>
+            <li class="nav-link" onclick="generations()">
+                <a class="link"> <i class="fa fa-bus nav-ic"></i>
+                    <span class="nav-strg">Generations</span>
+                  </a>
+            </li>
+            <li class="nav-link" onclick="expanded()">
+            <a class="link"> <i class="fa fa-shapes nav-ic"></i>
+                <span class="nav-strg">Expanded</span>
+              </a>
+        </li>
+            <li class="nav-link" onclick="home()">
+                <a class="link"> <i class="fa fa-home nav-ic"></i>
+                    <span class="nav-strg">Home</span>
+                  </a>
+            </li>
+        </ul>
+    </nav>
+<br><br><br><br><br>
+
+        <!-- <h1 class="main-title" >Range Rover Generations</h1> -->
     <div class="first-gen-container">
         <h1>First Generation</h1>
         <img class="first-gen-img" src="img/first-gen.webp">
@@ -285,19 +343,14 @@ A major change came in 2010: a range of new engines was offered, with 5-litre ve
         </p>
     </div>
 
-<footer>
+<!-- <footer>
     <div class="mini-nav">
         <a class="mini-nav-link"> <i class="fa fa-home"></i> Home</a>
         <a class="mini-nav-link"> <i class="fa fa-home"></i> Generations</a>
         <a class="mini-nav-link"> <i class="fa fa-home"></i> Home</a>
         <a class="mini-nav-link"> <i class="fa fa-home"></i> Home</a>
     </div>
-</footer>
-
-<script>
-    function generations(){window.location.href = "generations.html";}
-    function expanded(){window.location.href = "expanded.html";}
-    function jaguarInfo(){window.location.href = "https://en.wikipedia.org/wiki/Land_Rover";}
-    </script>
+</footer> -->
+<script src="js/global.js"></script>
 </body>
 </html>
