--- a/Range Rover/index.html
+++ b/Range Rover/index.html
@@ -2,8 +2,8 @@
 <html lang="en"><head>
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="dark mode/dark-mode.css">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- <link rel="stylesheet" href="dark mode/dark-mode.css">
 <link rel="icon" href="favicon/ruby (1).png" type="image/x-icon">
 <link rel="stylesheet" href="mdb/css/global.min.css">
 <link rel="stylesheet" href="CSS/Timestamps.css">
@@ -45,6 +45,7 @@
 <script src="timeago/test/test_helpers.js" type="text/javascript"></script>
 <link rel="icon" href="favicon/favicon.png" sizes="16x16 32x32" type="image/png">
 <link rel="stylesheet" href="CSS/RUBY PRODUCTION.css"> -->
+<script src="js/global.js"></script>
 <link rel="stylesheet" href="css/global.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
@@ -54,17 +55,51 @@
         @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Raleway:wght@200&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Josefin+Sans&family=Raleway:wght@800&display=swap');
         body{
-            color: rgb(0, 0, 0);
-            background: rgb(255, 255, 255);
+            color: rgb(255, 255, 255);
+            background: rgb(0, 0, 0);
             user-select: none;
         }
+    .nav-ic{display: none;}
+    .nav-strg{display: block;}
+@media screen and (max-width: 768px) {
+    .nav-ic{display: block;}
+    .nav-strg{display: none;}
+}
     </style>
 </head>
 <body>
 
-    <center>
+    <nav class="navbar">
+        <!-- <div class="brand-name">
+            <a class="br-name">Group - 3</a>
+        </div> -->
+        <ul>
+            <li class="nav-link" onclick="info()">
+                <a class="link"> <i class="fa fa-info-circle nav-ic"></i>
+                  <span class="nav-strg">Info</span>
+                </a>
+            </li>
+            <li class="nav-link" onclick="generations()">
+                <a class="link"> <i class="fa fa-bus nav-ic"></i>
+                    <span class="nav-strg">Generations</span>
+                  </a>
+            </li>
+            <li class="nav-link" onclick="expanded()">
+            <a class="link"> <i class="fa fa-shapes nav-ic"></i>
+                <span class="nav-strg">Expanded</span>
+              </a>
+        </li>
+            <li class="nav-link" onclick="home()">
+                <a class="link"> <i class="fa fa-home nav-ic"></i>
+                    <span class="nav-strg">Home</span>
+                  </a>
+            </li>
+        </ul>
+    </nav>
+<br><br><br><br><br>
+    <!-- <center>
         <h1>Range Rover</h1>
-    </center>
+    </center> -->
 
     <div class="mini-container">
         <img class="img img-first" draggable="false" src="img/rr-1.webp">
@@ -90,7 +125,7 @@
                 <h4> Range Rover Evoque</h4>
                 <div class="sh-detail-primary">
                     The Land Rover Range Rover Evoque has 1 Diesel Engine and 1 Petrol Engine on offer. The Diesel engine is 1997 cc while the Petrol engine is 1997 cc . It is available with Automatic transmission.Depending upon the variant and fuel type the Range Rover Evoque has a mileage of & Ground clearance of Range Rover Evoque is 212mm. The Range Rover Evoque is a 5 seater 4 cylinder car and has length of 4371mm, width of 2100mm and a wheelbase of 2681mm.
-                    <br><br>
+                    <br>
                     • Transmission Type: Automatic<br>
                     • Fuel Type: Diesel<br>
                     • Top Speed: 230 KM/H<br>
@@ -105,7 +140,7 @@
                 <h4> Range Rover Velar</h4>
                 <div class="sh-detail-primary">
                     The Land Rover Range Rover Velar has 1 Diesel Engine and 1 Petrol Engine on offer. The Diesel engine is 1999 cc while the Petrol engine is 1997 cc . It is available with Automatic transmission.Depending upon the variant and fuel type the Range Rover Velar has a mileage of 15.8 kmpl . The Range Rover Velar is a 5 seater 4 cylinder car and has length of 4797mm, width of 2145mm and a wheelbase of 2874mm.
-                    <br><br>
+                    <br>
                     • Transmission Type: Automatic<br>
                     • Fuel Type: Petrol<br>
                     • Top Speed: 217 KM/H<br>
@@ -120,7 +155,7 @@
                 <h4> Range Rover Discovery</h4>
                 <div class="sh-detail-primary">
                     The Land Rover Discovery has 1 Diesel Engine and 3 Petrol Engine on offer. The Diesel engine is 2996 cc while the Petrol engine is 1997 cc and 2996 cc and 2995 cc . It is available with Automatic transmission.Depending upon the variant and fuel type the Discovery has a mileage of . The Discovery is a 7 seater 4 cylinder car.
-                    <br><br>
+                    <br>
                     • Transmission Type: Automatic<br>
                     • Fuel Type: Diesel<br>
                     • Top Speed: Undefined<br>
@@ -184,10 +219,5 @@
 
     </div>
 
-<script>
-function generations(){window.location.href = "generations.html";}
-function expanded(){window.location.href = "expanded.html";}
-function jaguarInfo(){window.location.href = "https://en.wikipedia.org/wiki/Land_Rover";}
-</script>
 </body>
 </html>
