--- a/user/om_73/range rover/index.html
+++ b/user/om_73/range rover/index.html
@@ -51,16 +51,68 @@
 <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <title>Group 3</title>
     <style>
+    @import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Comfortaa:wght@700&family=Jost&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Jost&family=Whisper&display=swap');
+
         @import url('https://fonts.googleapis.com/css2?family=Arimo:ital@1&family=Comfortaa:wght@700&family=Raleway:wght@800&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Raleway:wght@200&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Josefin+Sans&family=Raleway:wght@800&display=swap');
         body{
-            color: rgb(255, 255, 255);
-            background: rgb(0, 0, 0);
+            color: rgb(0, 0, 0);
+            background: rgb(255, 255, 255);
             user-select: none;
         }
+        h1{
+            color: #e0b68c;
+            font-family: 'Cinzel', serif;
+            letter-spacing: 1px;
+        text-shadow: 0 0 10px rgba(255, 0, 0, 0);
+        /* font-style: italic; */
+        padding: 10px 20px;
+        border-bottom: 2px rgba(214, 214, 214, 0) solid;
+        font-size: 40px;
+        margin: 15%;
+        height: 30vh;
+    }
     .nav-ic{display: none;}
     .nav-strg{display: block;}
+
+    .container{
+        border: 2px #00000000 solid;
+        padding: 0px;
+        margin: 60px 0;
+    }
+    .mid-section{
+        padding: 10px;
+    }
+    .mid-section h1{
+        margin: 0px 20px;
+        border: 2px rgba(0, 0, 0, 0) solid;
+        width: fit-content;
+        height: fit-content;
+            font-family: 'Cinzel', serif;
+    }
+    .mid-section h5{
+        letter-spacing: 0.5px;
+        border: 2px rgba(0, 0, 0, 0) solid;
+        color: rgb(34, 34, 34);
+        margin: 0px 50px;
+        height: fit-content;
+        font-size: 20px;
+            font-family: 'Cinzel', serif;
+    }
+    .mid-section h6{
+        width: 60%;
+        font-weight: normal;
+        letter-spacing: 0.5px;
+        border: 2px rgba(0, 0, 0, 0) solid;
+        color: rgb(112, 112, 112);
+        margin: 10px 60px;
+        height: fit-content;
+        font-size: 20px;
+            font-family: 'Jost', sans-serif;
+    }
+
 @media screen and (max-width: 768px) {
     .nav-ic{display: block;}
     .nav-strg{display: none;}
@@ -101,6 +153,12 @@
         <h1>Range Rover</h1>
     </center> -->
 
+    <div class="cover">
+        <center>
+        <h1>Welcome!</h1>
+    </center>
+    </div>
+
     <div class="mini-container">
         <img class="img img-first" draggable="false" src="img/rr-1.webp">
     <div class="first-sub-cont">
@@ -112,6 +170,21 @@
         </p>
     </div>
     </div>
+
+<div class="container">
+    <div class="mid-section">
+        <h1>Our Approach</h1>
+        <h6>
+            The challenge to build a sustainable, cleaner, greener
+world is one we at Jaguar Land Rover embrace with relish.
+Our innovative technologies don’t just make better cars,
+they can help so many people live better lives in so many
+ways. That is what we are about at Jaguar Land Rover.
+Making the world a better place.
+
+        </h6>
+    </div>
+</div>
 
     <div class="second-container">
 
@@ -167,7 +240,22 @@
 
     </div>
 
+    <div class="container">
+        <div class="mid-section">
+            <h1>Customers And Products</h1>
+            <h5>SUSTAINABLE CHOICES FOR TODAY'S WORLD</h5>
+            <h6>
+                The challenge to build a sustainable, cleaner, greener
+    world is one we at Jaguar Land Rover embrace with relish.
+    Our innovative technologies don’t just make better cars,
+    they can help so many people live better lives in so many
+    ways. That is what we are about at Jaguar Land Rover.
+    Making the world a better place.
 
+            </h6>
+        </div>
+    </div>
+<br><br>
     <div class="mini-container">
         <img class="img img-first" draggable="false" src="https://assets.thehansindia.com/h-upload/2020/10/06/1003659-jaguar-land-rover.webp">
     <div class="first-sub-cont">
