--- a/user/om_73/range rover/expanded.html
+++ b/user/om_73/range rover/expanded.html
@@ -55,8 +55,8 @@
         @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Raleway:wght@200&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Josefin+Sans&family=Raleway:wght@800&display=swap');
         body{
-            color: rgb(0, 0, 0);
-            background: rgb(255, 255, 255);
+            color: var(--black);
+            background: var(--white);
             user-select: none;
         }
     </style>
