--- a/user/om_73/range rover/generations.html
+++ b/user/om_73/range rover/generations.html
@@ -49,7 +49,7 @@
 <link rel="stylesheet" href="css/global.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <title>Group 3</title>
+    <title> Jaguar Land Rover Ranger Rover - Generations </title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Comfortaa:wght@700&family=Jost&display=swap');
             @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Jost&family=Whisper&display=swap');
@@ -103,7 +103,7 @@
         .first-gen-container{
             margin: 20px 20px;
             padding: 20px;
-            background-color: #fafafa;
+            background-color: #fafafa00;
             border: 2px #f0f0f000 solid;
             border-radius: 16px;
             line-height: 23px;
@@ -114,10 +114,13 @@
             font-family: 'Cinzel', serif;
             letter-spacing: 1px;
             font-size: 30px;
+            transform: rotate(-2deg);
         }
         .first-gen-img{
             width: 32%;
-            border-radius: 6px;
+            border: 6px var(--richColor) solid;
+            border-radius: 0px;
+            transform: rotate(-3deg);
         }
         .first-gen-info{
             color: #484848;
@@ -140,7 +143,7 @@
         .gen-container{
             margin: 60px 20px;
             padding: 20px;
-            background-color: #fafafa;
+            background-color: #fafafa00;
             border: 2px #007bff00 solid;
             border-radius: 16px;
             line-height: 30px;
@@ -155,9 +158,12 @@
         }
         .gen-img{
             float: right;
-            padding: 20px;
-            border-radius: 26px;
+            margin: 10px;
+            border: 6px var(--richColor) solid;
+            border-radius: 0px;
             width: 30%;
+            transform: rotate(-3deg);
+            box-shadow: 10px 10px 0 rgba(0, 0, 0, 0);
         }
         .gen-info{
             text-indent: 50px;
