--- a/user/om_73/range rover/index.html
+++ b/user/om_73/range rover/index.html
@@ -47,9 +47,10 @@
 <link rel="stylesheet" href="CSS/RUBY PRODUCTION.css"> -->
 <script src="js/global.js"></script>
 <link rel="stylesheet" href="css/global.css">
+<link rel="icon" href="https://s.tmimgcdn.com/scr/800x500/77400/jaguar-logo-template_77499-2-original.jpg" sizes="16x16 32x32" type="image/png">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <title>Group 3</title>
+    <title>Jaguar Land Rover Range Rover</title>
     <style>
     @import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Comfortaa:wght@700&family=Jost&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Jost&family=Whisper&display=swap');
@@ -58,12 +59,12 @@
         @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Raleway:wght@200&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Josefin+Sans&family=Raleway:wght@800&display=swap');
         body{
-            color: rgb(0, 0, 0);
-            background: rgb(255, 255, 255);
+            color: var(--black);
+            background: var(--white);
             user-select: none;
         }
         h1{
-            color: #e0b68c;
+            color: var(--richColor);
             font-family: 'Cinzel', serif;
             letter-spacing: 1px;
         text-shadow: 0 0 10px rgba(255, 0, 0, 0);
@@ -78,24 +79,24 @@
     .nav-strg{display: block;}
 
     .container{
-        border: 2px #00000000 solid;
+        border: 2px var(--transparent) solid;
         padding: 0px;
         margin: 60px 0;
     }
     .mid-section{
-        padding: 10px;
+        padding: 70px 20px;
     }
     .mid-section h1{
         margin: 0px 20px;
-        border: 2px rgba(0, 0, 0, 0) solid;
+        border: 2px var(--transparent) solid;
         width: fit-content;
         height: fit-content;
             font-family: 'Cinzel', serif;
     }
     .mid-section h5{
         letter-spacing: 0.5px;
-        border: 2px rgba(0, 0, 0, 0) solid;
-        color: rgb(34, 34, 34);
+        border: 2px var(--transparent) solid;
+        color: var(--faintDark);
         margin: 0px 50px;
         height: fit-content;
         font-size: 20px;
@@ -103,19 +104,71 @@
     }
     .mid-section h6{
         width: 60%;
+        line-height: 28px;
         font-weight: normal;
         letter-spacing: 0.5px;
-        border: 2px rgba(0, 0, 0, 0) solid;
-        color: rgb(112, 112, 112);
+        border: 2px var(--transparent) solid;
+        color: var(--faintDark);
         margin: 10px 60px;
         height: fit-content;
         font-size: 20px;
             font-family: 'Jost', sans-serif;
     }
+    .app-right{
+        float: right;
+        width: 30%;
+        transform: rotate(3deg);
+        margin: 20px 40px;
+        box-shadow: 10px 10px 0px var(--shadow);
+    }
 
 @media screen and (max-width: 768px) {
     .nav-ic{display: block;}
     .nav-strg{display: none;}
+    .container{
+        border: 2px #00000000 solid;
+        padding: 0px;
+        margin: 60px 0;
+    }
+    .mid-section{
+        padding: 70px 10px;
+    }
+    .mid-section h1{
+        margin: 0px 0px;
+        border: 2px rgba(0, 0, 0, 0) solid;
+        width: fit-content;
+        height: fit-content;
+        font-size: 30px;
+            font-family: 'Cinzel', serif;
+    }
+    .mid-section h5{
+        letter-spacing: 0.5px;
+        border: 2px rgba(0, 0, 0, 0) solid;
+        color: rgb(34, 34, 34);
+        margin: 0px 20px;
+        height: fit-content;
+        font-size: 20px;
+            font-family: 'Cinzel', serif;
+    }
+    .mid-section h6{
+        width: 90%;
+        line-height: 28px;
+        font-weight: normal;
+        letter-spacing: 0.5px;
+        border: 2px rgba(0, 0, 0, 0) solid;
+        color: rgb(112, 112, 112);
+        margin: 10px 20px;
+        height: fit-content;
+        font-size: 20px;
+            font-family: 'Jost', sans-serif;
+    }
+    .app-right{
+        float: right;
+        width: 100%;
+        transform: rotate(0deg);
+        margin: 20px 0px;
+        box-shadow: 0px 0px 0px rgb(56, 56, 56);
+    }
 }
     </style>
 </head>
@@ -160,7 +213,7 @@
     </div>
 
     <div class="mini-container">
-        <img class="img img-first" draggable="false" src="img/rr-1.webp">
+        <img class="img img-first" draggable="false" src="https://cdn.bigboytoyz.com/new-version/products/2020-range-rover-sport-hse-white-bbt.jpg">
     <div class="first-sub-cont">
         <h2>Introduction </h2>
         <p class="details">
@@ -173,7 +226,36 @@
 
 <div class="container">
     <div class="mid-section">
+        <img class="app-right" src="https://di-uploads-pod16.dealerinspire.com/wildejaguarlandroversarasota/uploads/2019/08/jaguar-reliability.jpg">
         <h1>Our Approach</h1>
+        <h6>
+            The challenge to build a sustainable, cleaner, greener
+world is one we at Jaguar Land Rover embrace with relish.
+Our innovative technologies don’t just make better cars,
+they can help so many people live better lives in so many
+ways. That is what we are about at Jaguar Land Rover.
+Making the world a better place.
+
+        </h6>
+    </div>
+</div>
+<br><br>
+<div class="mini-container">
+    <img class="img img-first" draggable="false" src="https://www.carlogos.org/logo/Jaguar-logo-640x430.jpg">
+<div class="first-sub-cont">
+    <h2>Jaguar Land Rover | Tata Motors  </h2>
+    <p class="details">
+        Jaguar Land Rover Automotive PLC is the holding company of Jaguar Land Rover Limited, and is a British multinational automobile manufacturer which produces luxury vehicles and sport utility vehicles. Jaguar Land Rover is a subsidiary of Tata Motors Limited and has its head office in Whitley, Coventry, UK. The principal activity of Jaguar Land Rover Limited is the design, development, manufacture and sale of vehicles bearing the Jaguar and Land Rover marques.
+
+        <p class="know-more"  onclick="jaguarInfo()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
+    </p>
+</div>
+</div>
+<div class="container">
+    <div class="mid-section">
+        <img class="app-right" src="img/rr-1.webp">
+        <h1>Customers And Products</h1>
+        <h5>SUSTAINABLE CHOICES FOR TODAY'S WORLD</h5>
         <h6>
             The challenge to build a sustainable, cleaner, greener
 world is one we at Jaguar Land Rover embrace with relish.
@@ -240,33 +322,55 @@ Making the world a better place.
 
     </div>
 
-    <div class="container">
-        <div class="mid-section">
-            <h1>Customers And Products</h1>
-            <h5>SUSTAINABLE CHOICES FOR TODAY'S WORLD</h5>
-            <h6>
-                The challenge to build a sustainable, cleaner, greener
-    world is one we at Jaguar Land Rover embrace with relish.
-    Our innovative technologies don’t just make better cars,
-    they can help so many people live better lives in so many
-    ways. That is what we are about at Jaguar Land Rover.
-    Making the world a better place.
 
-            </h6>
+    <div class="second-container">
+
+        <div class="section-title">
+            <h2>Jaguar</h2>
         </div>
-    </div>
-<br><br>
-    <div class="mini-container">
-        <img class="img img-first" draggable="false" src="https://assets.thehansindia.com/h-upload/2020/10/06/1003659-jaguar-land-rover.webp">
-    <div class="first-sub-cont">
-        <h2>Jaguar Land Rover | Tata Motors  </h2>
-        <p class="details">
-            Jaguar Land Rover Automotive PLC is the holding company of Jaguar Land Rover Limited, and is a British multinational automobile manufacturer which produces luxury vehicles and sport utility vehicles. Jaguar Land Rover is a subsidiary of Tata Motors Limited and has its head office in Whitley, Coventry, UK. The principal activity of Jaguar Land Rover Limited is the design, development, manufacture and sale of vehicles bearing the Jaguar and Land Rover marques.
 
-            <p class="know-more"  onclick="jaguarInfo()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
-        </p>
+        <div class="gr-card">
+            <img class="gr-img" src="https://www.jaguar.com/sdlmedia/637788723311721183SH.jpg?v=1#desktop__1200x860">
+            <div class="gr-details">
+                <h4> Jaguar F-Pace</h4>
+                <div class="sh-detail-secondary">
+               <b>• Engine: </b> Diesel/Petrol <br>
+               <b>• Max Speed: </b> 240 Km/h <br>
+               <b>• Tank Capacity (litre) : </b> 69 (approx.) <br>
+               <b>• Price Range: </b>Rs.74.88 lakh - 1.51 Cr* <br>
+            </div>
+                <p class="know-more"  onclick="models()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
+            </div>
+        </div>
+        <div class="gr-card">
+            <img class="gr-img" src="https://www.jaguar.com/sdlmedia/637788723292101154IR.jpg?v=1#desktop__1200x860">
+            <div class="gr-details">
+                <h4> Jaguar F-Type COUPÉ</h4>
+                <div class="sh-detail-secondary">
+                    <b>• Engine: </b> Diesel/Petrol <br>
+                    <b>• Max Speed: </b> 250 Km/h <br>
+                    <b>• Tank Capacity (litre) : </b> 63 (approx.) <br>
+                    <b>• Price Range: </b>Rs.98.13 Lakh - 1.49 Cr* <br>
+                </div>
+                <p class="know-more"  onclick="models()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
+            </div>
+        </div>
+        <div class="gr-card">
+            <img class="gr-img" src="https://www.jaguar.com/sdlmedia/637788723302351161KD.jpg?v=1#desktop__1200x860">
+            <div class="gr-details">
+                <h4> Jaguar XE</h4>
+                <div class="sh-detail-secondary">
+                    <b>• Engine: </b> Diesel/Petrol <br>
+                    <b>• Max Speed: </b> 245 Km/h <br>
+                    <b>• Tank Capacity (litre) : </b> 56 (approx.) <br>
+                    <b>• Price Range: </b>Rs.46.64 - 48.50 Lakh* <br>
+                </div>
+                <p class="know-more"  onclick="models()">Know More <i class="fa fa-chevron-right ic-icon"></i> </p>
+            </div>
+        </div>
+
     </div>
-    </div>
+
 
     <div class="second-container">
 
@@ -297,7 +401,7 @@ Making the world a better place.
         <div class="gr-card">
             <img class="gr-img" src="img/third-gen.jpg">
             <div class="gr-details">
-                <h4> Thirt Generation Range Rover</h4>
+                <h4> Third Generation Range Rover</h4>
                 <div class="sh-detail-secondary">
                     In 2001, the third-generation model was introduced, which saw the model move further upmarket.
                 </div>
