--- a/user/om_73/range rover/index.html
+++ b/user/om_73/range rover/index.html
@@ -330,7 +330,7 @@ Making the world a better place.
         </div>
 
         <div class="gr-card">
-            <img class="gr-img" src="https://www.jaguar.com/sdlmedia/637788723311721183SH.jpg?v=1#desktop__1200x860">
+            <img class="gr-img" src="https://www.jaguar.com/sdlmedia/637788723311721183SH.jpg">
             <div class="gr-details">
                 <h4> Jaguar F-Pace</h4>
                 <div class="sh-detail-secondary">
@@ -343,7 +343,7 @@ Making the world a better place.
             </div>
         </div>
         <div class="gr-card">
-            <img class="gr-img" src="https://www.jaguar.com/sdlmedia/637788723292101154IR.jpg?v=1#desktop__1200x860">
+            <img class="gr-img" src="https://www.jaguar.com/sdlmedia/637788723292101154IR.jpg">
             <div class="gr-details">
                 <h4> Jaguar F-Type COUPÉ</h4>
                 <div class="sh-detail-secondary">
@@ -356,7 +356,7 @@ Making the world a better place.
             </div>
         </div>
         <div class="gr-card">
-            <img class="gr-img" src="https://www.jaguar.com/sdlmedia/637788723302351161KD.jpg?v=1#desktop__1200x860">
+            <img class="gr-img" src="https://www.jaguar.com/sdlmedia/637788723302351161KD.jpg">
             <div class="gr-details">
                 <h4> Jaguar XE</h4>
                 <div class="sh-detail-secondary">
